--- a/style.css
+++ b/style.css
@@ -244,7 +244,8 @@ section {
 
 .photo-card {
     background-color: var(--card-bg);
-    height: 500px; 
+    width: 400px;
+    height: 600px; 
     border-radius: 8px;
     overflow: hidden;
     position: relative;
